# allan

./: .travis.yml  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SIMD_OPTIMIZATIONS.md
.claude/: settings.local.json
benches/: comprehensive_simd_bench.rs  lazy_bench.rs  simd_bench.rs  sliding_bench.rs
scripts/: autodoc.enc  doc.cfg
src/: lib.rs
