[package]
name = "allan"
version = "0.2.1"
authors = ["Brian Martin <brayniac@gmail.com>"]

license = "MIT"

description = "variance and deviation tools for stability analysis"

homepage = "https://github.com/brayniac/allan"
documentation = "http://brayniac.github.io/allan"
repository = "https://github.com/brayniac/allan"

readme = "README.md"

keywords = [ "stability", "allan", "deviation", "variance" ]

include = [ "src/**/*", "README.md", "LICENSE-*", "Cargo.toml" ]
