[package]
name = "allan"
version = "0.2.5-pre"
authors = ["Brian Martin <brayniac@gmail.com>"]
edition = "2024"

license = "MIT/Apache-2.0"

description = "allan variance and deviation"

homepage = "https://github.com/brayniac/allan"
documentation = "https://docs.rs/allan"
repository = "https://github.com/brayniac/allan"

readme = "README.md"

keywords = [ "stability", "allan", "deviation", "variance" ]

[[bench]]
name = "simd_bench"
harness = false

[[bench]]
name = "comprehensive_simd_bench"
harness = false

[[bench]]
name = "sliding_bench"
harness = false

[dependencies]
# Optional SIMD support via wide crate (works on stable)
wide = { version = "0.7", optional = true }

[features]
default = ["simd"]
# SIMD optimizations (enabled by default, disable with --no-default-features)
simd = ["wide"]

[dev-dependencies]
probability = "0.15.8"
rand = "0.3.16"
